# swagger/swagger.json
@@ -31,6 +31,12 @@
                     },
                     {
                         "in": "query",
+                        "name": "search",
+                        "description": "Fields returned. e.g. transport ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
                         "name": "fields",
                         "description": "Fields returned. e.g. col1,col2 ...",
                         "type": "string"
@@ -115,6 +121,12 @@
                     },
                     {
                         "in": "query",
+                        "name": "search",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
                         "name": "fields",
                         "description": "Fields returned. e.g. col1,col2 ...",
                         "type": "string"
@@ -168,6 +180,12 @@
                     {
                         "in": "query",
                         "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "search",
                         "description": "Filter. e.g. col1:v1,col2:v2 ...",
                         "type": "string"
                     }
@@ -636,6 +654,12 @@
                     },
                     {
                         "in": "query",
+                        "name": "search",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
                         "name": "fields",
                         "description": "Fields returned. e.g. col1,col2 ...",
                         "type": "string"
@@ -715,6 +739,12 @@
                     {
                         "in": "query",
                         "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "search",
                         "description": "Filter. e.g. col1:v1,col2:v2 ...",
                         "type": "string"
                     }
@@ -1331,8 +1361,7 @@
                     "$ref": "#/definitions/models.Customers"
                 },
                 "Status": {
-                    "type": "integer",
-                    "format": "int64"
+                    "$ref": "#/definitions/models.Status"
                 },
                 "Transaction": {
                     "$ref": "#/definitions/models.Transactions"
@@ -1372,6 +1401,42 @@
                 },
                 "ServiceName": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Status": {
+            "title": "Status",
+            "type": "object",
+            "properties": {
+                "Active": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "CreatedBy": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "DateCreated": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "DateModified": {
+                    "type": "string",
+                    "format": "datetime"
+                },
+                "ModifiedBy": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Status": {
+                    "type": "string"
+                },
+                "StatusCode": {
+                    "type": "string"
+                },
+                "StatusId": {
+                    "type": "integer",
+                    "format": "int64"
                 }
             }
         },
